--- a/resources/style.css
+++ b/resources/style.css
@@ -43,9 +43,7 @@ body {
 
 /*========== OUR MISSION IMAGE ===========*/
 .ourmission {
-background-image: url("img\img-mission-background.jpg");
-background-size: auto;
-background-repeat: no-repeat;
+background-image: url("img/img-mission-background.jpg");
 }
 
 /*========== Tea Of The Month ===========*/
